Azurirano: Ispravljeni domeni, repo, integracija sa auth-service